--- a/conf/app.ini
+++ b/conf/app.ini
@@ -13,7 +13,7 @@ WRITE_TIMEOUT = 60
 [database]
 TYPE = mysql
 USER = root
-PASSWORD = 123321
+PASSWORD = ''
 #127.0.0.1:3306
 HOST = 127.0.0.1:3306
 NAME = blog
